[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/prefabs/ui/Settings.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/scenes/IntroScene.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/SpaceMono-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/sprites/bg.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/settings-btn_intro.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/playBtnIntro.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/x-btn.png" type="Texture" id=7]
[ext_resource path="res://src/prefabs/SceneTransition2.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/prefabs/BtnSound.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/prefabs/ui/BouncyBtn.gd" type="Script" id=10]
[ext_resource path="res://src/scenes/LogoWave.gd" type="Script" id=11]
[ext_resource path="res://assets/music/IntroStingerFINALv6.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/sprites/intro-bg.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 120
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "Logo Wipe"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/C:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/U:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/R:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HBoxContainer/R2:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.35, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HBoxContainer/E:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.45, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HBoxContainer/N:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.55, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HBoxContainer/T:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.65, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HBoxContainer/S:self_modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.75, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Label2:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = false
tracks/8/keys = {
"times": PoolRealArray( 0, 0.7, 1.2, 1.6 ),
"transitions": PoolRealArray( 1, 0.5, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 181 ), Vector2( 1, 181 ), Vector2( 1, 256 ), Vector2( 1, 246 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../Label2:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.7, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0627451, 0.368627, 0.52549, 0 ), Color( 0.0627451, 0.368627, 0.52549, 0 ), Color( 0.0627451, 0.368627, 0.52549, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HBoxContainer/C:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HBoxContainer/U:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HBoxContainer/R:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="Intro" type="Node2D"]
position = Vector2( -2, 0 )
script = ExtResource( 2 )

[node name="Bg" type="Sprite" parent="."]
visible = false
position = Vector2( 512, 285.5 )
scale = Vector2( 1.14792, 1.15741 )
texture = ExtResource( 4 )

[node name="Bg2" type="Sprite" parent="."]
position = Vector2( 512, 288 )
scale = Vector2( 1.14792, 1.15741 )
texture = ExtResource( 13 )

[node name="Currents Labels" type="Node2D" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="Currents Labels"]
margin_top = 121.0
margin_right = 1025.0
margin_bottom = 321.0
rect_min_size = Vector2( 0, 200 )
alignment = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
frequency = 10.0
amplitude = 4.0
timeMultiplier = 4.0
letterTimeIncrement = 50.0
player = NodePath("../AnimationPlayer")

[node name="C" type="Label" parent="Currents Labels/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 206.0
margin_top = 10.0
margin_right = 279.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "c"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="U" type="Label" parent="Currents Labels/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 283.0
margin_top = 10.0
margin_right = 356.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "u"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R" type="Label" parent="Currents Labels/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 360.0
margin_top = 10.0
margin_right = 433.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "r"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R2" type="Label" parent="Currents Labels/HBoxContainer"]
margin_left = 437.0
margin_top = 10.0
margin_right = 510.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "r"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="E" type="Label" parent="Currents Labels/HBoxContainer"]
margin_left = 514.0
margin_top = 10.0
margin_right = 587.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "e"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N" type="Label" parent="Currents Labels/HBoxContainer"]
margin_left = 591.0
margin_top = 10.0
margin_right = 664.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "n"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="T" type="Label" parent="Currents Labels/HBoxContainer"]
margin_left = 668.0
margin_top = 10.0
margin_right = 741.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "t"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S" type="Label" parent="Currents Labels/HBoxContainer"]
margin_left = 745.0
margin_top = 10.0
margin_right = 818.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 1 )
text = "s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Currents Labels"]
"anims/Logo Wipe" = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Label2" type="Label" parent="."]
self_modulate = Color( 0.211765, 0.25098, 0.560784, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1.0
margin_top = 284.0
margin_right = 1025.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 2 )
text = "a game by 
taylor anderson, austin m, and colin zarzour"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayBtn" type="TextureButton" parent="."]
margin_left = 412.0
margin_top = 412.0
margin_right = 586.0
margin_bottom = 524.0
rect_pivot_offset = Vector2( 88, 57 )
texture_normal = ExtResource( 6 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBtn" type="TextureButton" parent="."]
margin_left = 563.0
margin_top = 385.0
margin_right = 683.0
margin_bottom = 505.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 60, 60 )
texture_normal = ExtResource( 5 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="Node2D" parent="."]
visible = false
position = Vector2( 202, 173 )
scale = Vector2( 0.8, 0.8 )

[node name="ColorRect" type="ColorRect" parent="SettingsMenu"]
margin_left = -344.0
margin_top = -270.0
margin_right = 1132.0
margin_bottom = 571.0
color = Color( 0, 0, 0, 0.109804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" parent="SettingsMenu" instance=ExtResource( 1 )]
position = Vector2( 369, 145 )
scale = Vector2( 1.4, 1.4 )

[node name="XBtn" type="TextureButton" parent="SettingsMenu/settings"]
margin_left = 111.429
margin_top = -222.321
margin_right = 181.429
margin_bottom = -152.321
rect_scale = Vector2( 0.75, 0.75 )
texture_normal = ExtResource( 7 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SceneTransition" parent="." instance=ExtResource( 8 )]
visible = false

[node name="BtnSound" parent="." instance=ExtResource( 9 )]
volume_db = -10.0

[node name="Stinger" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Music"

[connection signal="pressed" from="PlayBtn" to="." method="onPlayBtnPressed"]
[connection signal="pressed" from="SettingsBtn" to="." method="onSettingsBtnPressed"]
[connection signal="pressed" from="SettingsMenu/settings/XBtn" to="." method="onSettingsXPressed"]
